# igasync

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  simple_server.js
include/igasync/: concepts.h  execution_context.h  inline_execution_context.h  promise.h  promise.inl  promise_combiner.h  promise_combiner.inl  task.h  task.inl  task_list.h  task_list_base.h  thread_pool.h  void_promise.inl
samples/: CMakeLists.txt
samples/read-file/: CMakeLists.txt  data_file.txt  file_promise.h  file_promise_native.cc  file_promise_web.cc  main_native.cc  main_web.cc
samples/read-file/sha256/: picosha2.h
src/: inline_execution_context.cc  promise_combiner.cc  task.cc  task_list.cc  thread_pool.cc  void_promise.cc
tests/: concepts_test.cc  inline_execution_context_test.cc  promise_combiner_test.cc  promise_test.cc  task_list_test.cc  task_test.cc  thread_pool_test.cc  void_promise_test.cc
tests/include/: test_objects.h
